# ChangeLog for media-plugins/audacious-plugins
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.250 2012/06/06 13:22:28 jer Exp $

  06 Jun 2012; Jeroen Roovers <jer@gentoo.org>
  audacious-plugins-3.2.2-r1.ebuild:
  Stable for HPPA (bug #417143).

  29 May 2012; Brent Baude <ranger@gentoo.org>
  audacious-plugins-3.2.2-r1.ebuild:
  Marking audacious-plugins-3.2.2-r1 ppc64 for bug 417143

  27 May 2012; Jeff Horelick <jdhore@gentoo.org>
  -audacious-plugins-3.2.1.ebuild, -audacious-plugins-3.2.ebuild:
  Remove some old versions.

*audacious-plugins-3.2.3 (27 May 2012)

  27 May 2012; Jeff Horelick <jdhore@gentoo.org>
  +audacious-plugins-3.2.3.ebuild:
  Version bump and cleanups.

  25 May 2012; Jeff Horelick <jdhore@gentoo.org>
  +files/audacious-plugins-2.x-fix-skins-build-glib-2.32.patch,
  audacious-plugins-2.4.4-r1.ebuild, audacious-plugins-2.5.4.ebuild:
  Add a patch to fix compilation of 2.x versions with >=dev-libs/glib-2.32

  24 May 2012; Jeff Horelick <jdhore@gentoo.org>
  audacious-plugins-3.2.2-r1.ebuild:
  marked x86 per bug 417143

  23 May 2012; Agostino Sarubbo <ago@gentoo.org>
  audacious-plugins-3.2.2-r1.ebuild:
  Stable for amd64, wrt bug #417143

  07 May 2012; Jeff Horelick <jdhore@gentoo.org>
  +files/audacious-plugins-3.2.2-fix-build-sdl.patch,
  audacious-plugins-3.2.2-r1.ebuild:
  Add patch from upstream for fixing build with sdl (upstream commit
  b6df18997dabe). Gentoo bug #414999

  05 May 2012; Jeff Horelick <jdhore@gentoo.org>
  audacious-plugins-2.4.4-r1.ebuild, audacious-plugins-2.5.4.ebuild,
  audacious-plugins-3.0.3.ebuild, audacious-plugins-3.1.ebuild,
  audacious-plugins-3.1.1.ebuild, audacious-plugins-3.2.ebuild,
  audacious-plugins-3.2.1.ebuild, audacious-plugins-3.2.2-r1.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*audacious-plugins-3.2.2-r1 (16 Apr 2012)

  16 Apr 2012; Jeff Horelick <jdhore@gentoo.org>