@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/audacious-plugins
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.250 2012/06/06 13:22:28 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.251 2012/06/10 18:44:25 jdhore Exp $
+
+  10 Jun 2012; Jeff Horelick <jdhore@gentoo.org> audacious-plugins-3.2.3.ebuild:
+  Drop gtk3 support for now as it is currently a bit broken.
 
   06 Jun 2012; Jeroen Roovers <jer@gentoo.org>
   audacious-plugins-3.2.2-r1.ebuild:
